--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "@progress/kendo-drawing": "^1.5.7",
     "@progress/kendo-theme-bootstrap": "^2.14.0",
     "@progress/kendo-theme-default": "^2.56.0",
-    "angular-file-uploader": "^4.1.2",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "4.1.3",
     "core-js": "2.5.7",
@@ -69,6 +68,7 @@
     "@ngtools/webpack": "^6.2.1",
     "@types/jasmine": "^2.8.8",
     "@types/node": "^10.9.4",
+    "angular-file": "^0.5.4",
     "angular-router-loader": "0.8.5",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^5.2.1",
